--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <!-- <a href="#" class="btn">View Project</a> -->
             </div>
             <div class="project-card">
-                <img src="images_network_project3.png" alt="Network Security Assessment">
+                <img src="network_project3.png" alt="Network Security Assessment">
                 <h3>Network Security Assessment</h3>
                 <p>Conducted a thorough assessment of a simulated corporate network, identifying vulnerabilities and proposing security enhancements.</p>
                 <!-- <a href="#" class="btn">View Project</a> -->
