--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Ilagan, Harvey D.</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
+                <p>IT Student</p>
                 <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">Hire me</a>
             </div>
         </div>
@@ -58,7 +59,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Harvey and I'm a <span class="typing-2"></span></div>
-                    <p>I am currently studying at Laguna State Polytechnic University and have completed coursework in Programming, Database Management, and Networking. I have also participated in various workshops and hackathons that have enhanced my practical skills.</p>
+                    <p>currently studying at Laguna State Polytechnic University and have completed coursework in Programming, Database Management, and Networking.</p>
                     <br>
                     <ul class="about-info mt-4 px-md-0 px-2">
                         <li class="d-flex"><span>Software Development</span>
@@ -92,7 +93,7 @@
                         <img src="SMIHS.jpg" alt="">
                         <div class="text">Santa Maria Integrated High School</div>
                         <h2>2013-2019</h2>
-                        <p>I studied regular course from std. 8 to 10, and 2 years of senior high in Technical Vocational Livelihood </p>
+                        <p>I studied 4 years of junior high school and 2 years of senior high in Technical Vocational Livelihood </p>
                     </div>
                 </div>
                 <div class="card">
@@ -101,7 +102,7 @@
                         <img src="SMES.png" alt="">
                         <div class="text">Santa Maria Elementary School</div>
                         <h2>2006-2013</h2>
-                        <p>This is my first school, I joined here at the elementary level and completed my lower secondary (std. 8) and secondary (std. 10) in regular subjects.</p>
+                        <p>This is my first school, I joined here at the elementary level and completed my lower regular subjects.</p>
                     </div>
                 </div>
             </div>
