--- a/index.html
+++ b/index.html
@@ -221,11 +221,8 @@
         <div class="job">
             <h2>Awards and Achievements</h2>
             <ul>
-                <li>Best Merchandiser Award - 2023</li>
-                <li>Top Sales Performance - 2022</li>
-                <li>Customer Service Excellence - 2021</li>
-                <li>Innovative Merchandising Strategy - 2020</li>
-                <li>Employee of the Year - 2019</li>
+                <li>Crimping Relay Champion - 2023</li>
+                <li>Electrical Installation and Maintenance NC II - 2021</li>
             </ul>
         </div>
     </section>
