--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Ilagan, Harvey D.</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <p>IT Student</p>
+                <h2>IT Student</h2>
                 <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">Hire me</a>
             </div>
         </div>
