--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Harvey and I'm a <span class="typing-2"></span></div>
-                    <p>currently studying at Laguna State Polytechnic University and have completed coursework in Programming, Database Management, and Networking.My goal is to leverage my technical skills to create user-friendly web applications.</p>
+                    <p>dedicated IT student specializing in network administration. With a passion for technology and a strong foundation in networking principles, I am eager to apply my skills in real-world environments. I am currently pursuing a Bachelor’s degree in Information Technology at [Your University] and have developed a keen interest in network security and management.</p>
                     <br>
                     <ul class="about-info mt-4 px-md-0 px-2">
                         <li class="d-flex"><span>Software Development</span>
