--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="profile-1.jpeg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Harvey and I'm a <span class="typing-2"></span></div>
@@ -158,25 +158,25 @@
         <!-- <img src="images/header_image.jpg" alt="Network Administration" class="header-image"> -->
         <div class="projects-container">
             <div class="project-card">
-                <img src="images/network_project1.jpg" alt="Network Setup">
+                <img src="network_project1.jpg" alt="Network Setup">
                 <h3>Home Network Setup</h3>
                 <p>Designed and configured a secure home network, including routers, switches, and firewalls to optimize performance and security.</p>
                 <!-- <a href="#" class="btn">View Project</a> -->
             </div>
             <div class="project-card">
-                <img src="images/network_project2.png" alt="Server Configuration">
+                <img src="network_project2.png" alt="Server Configuration">
                 <h3>Linux Server Configuration</h3>
                 <p>Set up and managed a Linux server for hosting a website, implementing SSH and firewall rules to enhance security.</p>
                 <!-- <a href="#" class="btn">View Project</a> -->
             </div>
             <div class="project-card">
-                <img src="images/images_network_project3.png" alt="Network Security Assessment">
+                <img src="network_project3.png" alt="Network Security Assessment">
                 <h3>Network Security Assessment</h3>
                 <p>Conducted a thorough assessment of a simulated corporate network, identifying vulnerabilities and proposing security enhancements.</p>
                 <!-- <a href="#" class="btn">View Project</a> -->
             </div>
             <div class="project-card">
-                <img src="images/network_project4.png" alt="Wireless Network Design">
+                <img src="network_project4.png" alt="Wireless Network Design">
                 <h3>Network Monitoring</h3>
                 <p>Developed a unique approach to optimize the university’s network performance, implementing effective configurations that reduced latency and improved user experience.</p>
                 <!-- <a href="#" class="btn">View Project</a> -->
@@ -236,7 +236,7 @@
                 <div class="card">
                     <div class="box">
                         <h1>College</h1><br>
-                        <img src="images/LSPU.jpg" alt="">
+                        <img src="LSPU.jpg" alt="">
                         <div class="text">Laguna State Polytechnic University</div>
                         <h2>2021-2025</h2>
                         <p>I am pursuing Bachelors degree in Bachelor of Science Information and Iechnology (BSIT) Major in Network Administration.</p>
@@ -245,7 +245,7 @@
                 <div class="card">
                     <div class="box">
                         <h1>High School</h1><br>
-                        <img src="images/SMIHS.jpg" alt="">
+                        <img src="SMIHS.jpg" alt="">
                         <div class="text">Santa Maria Integrated High School</div>
                         <h2>2013-2019</h2>
                         <p>I studied regular course from std. 8 to 10, and 2 years of senior high in Technical Vocational Livelihood </p>
@@ -254,7 +254,7 @@
                 <div class="card">
                     <div class="box">
                         <h1>Elementary</h1><br>
-                        <img src="images/SMES.png" alt="">
+                        <img src="SMES.png" alt="">
                         <div class="text">Santa Maria Elementary School</div>
                         <h2>2006-2013</h2>
                         <p>This is my first school, I joined here at the elementary level and completed my lower secondary (std. 8) and secondary (std. 10) in regular subjects.</p>
