--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </section>
 
     <!-- projects section start -->
-    <section class="projects-section" id="project">
+    <section class="projects-section" id="projects">
         <h2>My Projects</h2>
         <!-- <img src="header_image.jpg" alt="Network Administration" class="header-image"> -->
         <div class="projects-container">
@@ -185,7 +185,7 @@
 
     <section id="work-experience">
         <!-- awards section -->
-        <div class="job" id="job">
+        <div class="job" id="awards">
             <h2>Awards and Achievements</h2>
             <ul>
                 <li>Crimping Relay Champion</li>
@@ -227,7 +227,7 @@
     </section>
 
     <!-- education section start -->
-    <section class="teams" id="teams">
+    <section class="teams" id="education">
         <div class="max-width">
             <h2 class="title">Education
             </h2>
